Some much needed navbar polish. Things now look nice at all sizes, and I disabled the hover popup when the navbar is collapsed. See https://github.com/CWSpear/bootstrap-hover-dropdown/issues/136 for the issue I created about this. fixes #210, fixes #236

--- a/WcaOnRails/app/assets/stylesheets/navbar-static-top.scss
+++ b/WcaOnRails/app/assets/stylesheets/navbar-static-top.scss
@@ -62,7 +62,7 @@ body {
 $omni-search-closed-width: 50px;
 $omni-search-open-width: 300px;
 
-@media (min-width: 480px) {
+@media (min-width: 768px) {
   .navbar-static-top {
     .navbar-brand {
       img {
@@ -105,21 +105,9 @@ $omni-search-open-width: 300px;
         }
       }
     }
-  }
-}
 
-@media (max-width: 479px) {
-  .container>.navbar-header,
-  .container-fluid>.navbar-header,
-  .container>.navbar-collapse,
-  .container-fluid>.navbar-collapse {
-    margin-right: 0;
-    margin-left: 0;
-  }
-}
-
-@media (min-width: 768px) {
-  .navbar-nav.navbar-right:last-child {
-    margin-right: 0;
+    .navbar-nav.navbar-right:last-child {
+      margin-right: 0;
+    }
   }
 }
